resources/tests/parser/bad/stmt_if.gshl
if
if (qwe
if qwe)
if (a == 2)
if (wer)
if (qweqwe) {
    print(qwe)
} else

if (234234) {
    print("zxc")
} elif
